--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Clean caches
         run: make clean
 
-      - name: Run tests (unit + integration)
-        run: make test
+      - name: Run unit tests
+        run: make unit
 
       - name: Run linting
         run: make lint
