--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,5 +69,24 @@ jobs:
         with:
           go-version: 1.22
 
+      - name: Install PostgreSQL client
+        run: sudo apt-get update && sudo apt-get install -y postgresql-client
+
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          for i in {1..10}; do
+            if pg_isready -h localhost -p 5432 -U postgres; then
+              exit 0;
+            fi;
+            sleep 5;
+          done;
+          exit 1;
+
+      - name: Apply database migrations
+        run: |
+          psql -h localhost -p 5432 -U postgres -d testdb -f migrations/schema.sql
+        env:
+          PGPASSWORD: postgres
+
       - name: Run integration tests with Docker
         run: make integration
