one more ci fix

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -22,7 +22,7 @@ linters:
 
 linters-settings:
   govet:
-    check-shadowing: true
+    shadow: true
   errcheck:
     check-type-assertions: true
   staticcheck:
