--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,9 +28,6 @@ jobs:
       - name: Run unit tests
         run: make unit
 
-      - name: Run coverage
-        run: make coverage
-
   integration:
     name: Integration Tests
     runs-on: ubuntu-latest
@@ -96,6 +93,8 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: stable
+      - name: Install dependencies
+        run: go mod download
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
